--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <hr class="right-hr">
       <section class="education">
         <h2>EDUCATION</h2>
+        <div class="table-responsive">
         <table>
             <thead>
                 <tr>
@@ -113,6 +114,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
       </section>
       <hr class="right-hr">
       <section class="certifications">
@@ -127,3 +129,4 @@
   </div>
 </body>
 </html>
+
